kinda fixed the overflow problem

--- a/src/frontend/static/frontend/css/home.css
+++ b/src/frontend/static/frontend/css/home.css
@@ -30,6 +30,7 @@
             background-attachment: fixed;
             background-size: cover;
             background-position: center;
+            overflow: hidden;
         }
 
         #about
@@ -52,8 +53,9 @@
             #about p
             {
                 font-style: italic;
-                font-size: 35px;
+                font-size: 2.5em;
                 text-align: justify;
+                text-align: center;
             }
 
                  #arrow 
@@ -67,6 +69,8 @@
                 margin-bottom: 0px;
                 text-align: center;
                 opacity: 0.7;
+                overflow: hidden;
+
 
             }
 
